--- a/sass/section/_index.scss
+++ b/sass/section/_index.scss
@@ -1,3 +1,3 @@
 @use "../mixins/index" as *;
 @use "../component/index" as *;
-@import "../section/header", "../section/features" ;
+@import "../section/header", "../section/features" , "./loader";
