--- a/sass/mixins/_.reset.scss
+++ b/sass/mixins/_.reset.scss
@@ -1,3 +1,8 @@
-h1{
-    color:$black
+*{
+    margin: 0;
+    padding: 0;
+    border-sizing:border-box;
+    scroll-behavior: smooth;
+    // color: white;
+    font-family: sans-serif;
 }
