--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,8 @@
+/* 
+sass --watch sass/style.scss css/style.css
+
+*/
+
 @forward  "./mixins/index";
 @forward  "./section/index";
+@forward  "./component/index";
