--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,45 @@
   padding: 0;
   border-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+body {
+  background: black;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 18px;
+  transition: 0.4s 0s ease-out all;
+}
+a:hover {
+  color: #00c77e;
+}
+
+button {
+  border: none;
+  outline: none !important;
+}
+button:hover {
+  cursor: pointer;
+  box-shadow: inset 99px 99px 99px rgba(0, 0, 0, 0.11);
 }
 
 *[data-placeholder=wrapper] {
   position: relative;
   width: 100%;
   padding: 10px;
-  background: linear-gradient(45deg, #000, #ddd, #eee, #eee);
+  background: linear-gradient(45deg, black, #ddd, #eee, #eee);
   height: 100%;
   border-radius: 3px;
 }
 
 *[data-placeholder=content] {
   opacity: 0;
-  transition: 0.4s 0 ease-out all;
+  transition: 0.4s 0s ease-out all;
 }
 
 *[data-placholder-status=active] {
@@ -27,6 +51,40 @@
 *[data-placholder-status=active] *[data-placeholder=content] {
   opacity: 1;
   color: inherit;
+}
+
+#header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100px;
+  padding: 10px 0;
+  max-width: 900px;
+  margin: auto;
+}
+#header .link {
+  padding: 0 14px;
+}
+
+#header .header__logo {
+  font-size: 2rem;
+}
+
+#hero {
+  text-align: center;
+}
+#hero .video-wrapper {
+  height: 70vh;
+  width: inherit;
+}
+#hero .button {
+  padding: 10px;
+  height: 80px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 100px;
+  color: white;
 }
 
 /* 
