--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,21 @@
+#features .heading, #features .feature-info {
+  margin: 20px 100px;
+}
+#features .heading h2, #features .feature-info h2 {
+  font-size: 3rem;
+  padding: 10px 0;
+}
+#features .heading p, #features .feature-info p {
+  max-width: 500px;
+  opacity: 0.7;
+}
+
 * {
   margin: 0;
   padding: 0;
   border-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Georama", sans-serif;
 }
 
 body {
@@ -14,7 +26,7 @@ body {
 a {
   text-decoration: none;
   color: inherit;
-  font-size: 18px;
+  font-size: 14px;
   transition: 0.4s 0s ease-out all;
 }
 a:hover {
@@ -54,13 +66,16 @@ button:hover {
 }
 
 #header {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
   height: 100px;
   padding: 10px 0;
-  max-width: 900px;
+  z-index: 10;
+  width: 100%;
   margin: auto;
 }
 #header .link {
@@ -71,16 +86,37 @@ button:hover {
   font-size: 2rem;
 }
 
+#features .feature {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+#features .feature:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
 #hero {
   text-align: center;
 }
 #hero .video-wrapper {
-  height: 70vh;
+  height: 90vh;
+  position: relative;
+  width: inherit;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.082);
+}
+#hero .video-wrapper video {
+  height: inherit;
+  pointer-events: none;
   width: inherit;
 }
 #hero .button {
   padding: 10px;
   height: 80px;
+  margin: 20px 0;
   background: transparent;
   border: 2px solid white;
   border-radius: 100px;
