--- a/sass/section/_hero.scss
+++ b/sass/section/_hero.scss
@@ -2,14 +2,26 @@
 text-align: center;
 
 .video-wrapper{
-height: 70vh;
+height: 90vh;
+@include position(relative);
 width: inherit;
+overflow: hidden;
+@include flex(center, center);
+background:rgba(0, 0, 0, 0.082) ;
+
+video{
+    // @include position(absolute);
+    height: inherit;
+    pointer-events: none;
+    width: inherit;
+}
 }
 
 
 .button{
 padding: 10px;
 height: 80px;
+margin: 20px 0;
 background: transparent;
 border: 2px solid $white;
 border-radius: 100px;
